fix: Ensure space after $ prompt displays properly and increase URL param delay
- Move space inside prompt-symbol span to prevent HTML whitespace collapse
- Increase URL parameter auto-execute delay from 500ms to 1500ms
- Ensures page animation completes before auto-executing commands
- Allows direct links like yourdomain.com?cmd=game to work properly

--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
             <div class="shell-output" id="shellOutput"></div>
             <div class="input-line" id="inputLine" style="display: none;">
                 <span class="prompt-path">~/yourdomain.com</span>
-                <span class="prompt-symbol">$</span> 
-                <input type="text" id="commandInput" class="command-input" autofocus autocomplete="off" spellcheck="false">
+                <span class="prompt-symbol">$ </span><input type="text" id="commandInput" class="command-input" autofocus autocomplete="off" spellcheck="false">
             </div>
         </div>
     </div>
